site/public/css/server.css
/* ... */
#header-text {font-weight: 300;display: flex;/* width: 100%; */align-items: center;}

#header a,
#header a:link,
#header a:visited {
    color: #000;
    text-decoration: underline;
}

#header a:hover {
    text-decoration: none;
}

#header a > i.fa {
    font-size: 20px;
}
#header a > i.fas {
    font-size: 20px;
}
#header a > i.far {
    font-size: 20px;
}

#header-text>h2:nth-child(2) {
    padding-top: 25px;
}

.text-center {
    text-align: center;
}

#logo-submitty {
    height: 80px;
}

@media (min-width: 357px) {
    #logo-submitty {
        float: right;
        margin-right: -15px;
    }
}
@media (max-width: 356px) {
    #logo-box {
        margin: 0;
        padding: 0;
    }
    #logo-submitty {
        width: 100%;
        height: auto;
        background-size: contain;
    }
}

.content {
    box-shadow: 0 2px 15px -5px #888888;
    background-color: #ffffff;
    border-radius: 3px;
    padding: 30px;
    margin: 15px;
}

.content:last-child {
    flex-grow: 1;
}

.content.gradeable_message {
    background-color: #006398; 
    color: white;
}

.forum_content {
    flex-grow: 1;
    padding: 0px;
}

.forum_show_threads {
    overflow: hidden;
    flex-direction: column;
    display: flex;
}

.pre_forum {
    font-family: inherit;
}

.content h1 {
    margin-bottom: 20px;
}

.content h2 {
    margin-bottom: 20px;
}

.subtitle {
    font-size: smaller;
    word-wrap: unset;
    white-space: normal;
}

#footer {
    margin-top: -10px;
    z-index: 20;
    width: 100%;
    padding: 5px 0 10px 0;
    text-align: center;
    clear: both;
}

#push {
    flex-grow: 1;
}

#footer a {
    color: #000000;
}

#footer a:hover {
    color: #405E90;
}

#footer #copyright {
    margin-right: 5px;
}

#footer #github {
    margin-left: 5px;
}

#copyright > a {
    color: #405E90;
}

#copyright > a:hover {
    text-decoration: underline;
}

.sub {
}

.sub::after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.panel {
    background-color: #FAFCFC;
    margin: 1%;
    padding: 1%;
}

.spacer30 {
    height: 30px;
}

.clear {
    clear: both;
    border-bottom: 1px solid lightgrey;
    padding-top: 20px;
}

#page-info {
    visibility: visible;
    display: none;
    position: absolute;
    top: 40px;
    left: 40px;
    z-index:1000;
    background: #fff;
    border: 1px solid #000;
    width: 80%;
    overflow-y: scroll;
    padding: 5px;
}

.fa-green {
    color: green;
}
.fas-green {
    color: green;
}
.far-green {
    color: green;
}

.fa-red {
    color: red;
}
.fas-red {
    color: red;
}
.far-red {
    color: red;
}

.menu {
    font-size: 20px;
    display: flex;
    align-items: center;
}

#alerts {

}

#messages {
    z-index: 999;
	position: fixed;
    top: 40px;
    left: 50%;
    width: 40%;
    margin-left: -20%;
}

.inner-message {
    margin: 0 auto 10px;
}

.message-close {
    float: right;
    margin-right: -20px;
    cursor: pointer;
}

.option {
    margin-bottom: 40px;
}

.option-title {
    font-weight: bold;
    font-size: 18px;
}

.option-alt {
    font-style: italic;
}

.option-input {
    margin-top: 10px;
}

.option-input > textarea,
.option-input > input[type="text"] {
    width: 95%;
    resize: none;
}

.option-small-input > textarea,
.option-small-input > input[type="text"] {
    width: 99%;
    padding-right: 1px;
    padding-left: 1px;
}

.option-small-output > input[type="text"] {
    width: 99%;
    padding-right: 1px;
    padding-left: 1px;
    border:none;
    background: transparent;
}

.post-panel-btn {
    height: 20px;
    padding-right: 10px;
}

#login-box {
    min-width: 300px;
    flex-grow: 1;
}

#login {
}

#login input[type="text"],
#login input[type="password"] {
    width: 100%;
    margin-bottom: 5px;
}

.label {
    font-weight: 700;
    margin-top: 5px;
    margin-right: 0;
    margin-left: 0;
}

.green-message {
    font-style: italic;
    font-weight: bold;
    color: #008800;
}

.blue-message {
    font-style: italic;
    font-weight: bold;
    color: #0a6496;
}

.red-message {
    font-style: italic;
    font-weight: bold;
    color: #af0000;
}

.yellow-message {
    font-style: italic;
    font-weight: bold;
    color: #ff9900;
}

.black-message {
    font-style: italic;
    font-weight: bold;
    color: #000000;
}

.sub-text {
    margin-left: 20px;
    margin-top: 10px;
}

.box {
    border-radius: 3px;
    border: 1px solid #dddddd;
    width: 100%;
    margin-top: 3px;
    margin-bottom: 3px;
    position: relative;
    float: left;
    background: rgba(255,255,255,0.8);
    box-shadow: 2px 2px 4px -3px #dddddd;
    padding: 5px 5px 10px;
}

.active {
    background-color: #d8eef6;
}

.deleted {
    background-color: #A9A9A9 !important;
}

.deleted.active {
    background-color: #505050 !important;
}

.important {
    /* THIS IS WHERE THE BACKGROUND COLOR FOR POSTS IS */
    border-style: solid;
    border-width: 4px;
    border-color: #ffd700; /* gold */
}

.viewed {
    color: #888888;
}

.box-title > h4 {
    margin-left: 20px;
}

.grade-results {
    display: flex;
    flex-direction: row;
}

.box > h4 {
    margin-bottom: 10px;
    margin-left: 10px;
    margin-top: 10px;
}
.box-block {
    vertical-align: top;
    margin-left: 10px;
    padding: 10px;
}

.box-block > h4 {
    margin-bottom: 10px;
}

.box-block > code,
.box-block > pre {
    padding: 10px;
    background-color: #F8F8F8;
    border: 1px solid #ddd;
    white-space: pre;
}

.half {
    float: left;
    width: 48%;
    margin-right: 10px;
}

.diff-element {
    float: left;
    margin-right: 20px;
}

.badge {
    float: left;
    display: inline-block;
    min-width: 70px;
    padding: 3px 7px;
    font-weight: bold;
    line-height: 1;
    color: #fff;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    background-color: #999;
    border-radius: 10px;
    margin-left: 10px;
    margin-right: 10px;
}
/* ... */

